tests/src/frontend/typechecking/invalid/loop_break_no_else.sk
fun no1(): void {
  while (false) break ""
}

fun no2(): void {
  do break 0 while (true)
}
